--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super DogCats - Tu tienda de mascotas</title>
+    <title>Crokelet - Tu tienda de mascotas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
 
-        <div class="logo">Super<span>DogCats</span></div>
+        <div class="logo">Cro<span>kelet</span></div>
 
         <div class="hero-section">
             <h1>Bienvenidos a Super DogCats</h1>
@@ -55,9 +55,9 @@
         </div>
 
         <footer>
-            <p>© 2024 Super DogCats. Todos los derechos reservados.</p>
+            <p>© 2024 Crokelet. Todos los derechos reservados.</p>
             <p>Dirección: Calle Principal #123, Ciudad</p>
-            <p>Teléfono: (123) 456-7890 | Email: info@superdogcats.com</p>
+            <p>Teléfono: (123) 456-7890 | Email: info@crokelet.com</p>
         </footer>
     </div>
 </body>
