--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="logo">Cro<span>kelet</span></div>
 
         <div class="hero-section">
-            <h1>Bienvenidos a Super DogCats</h1>
-            <p>Tu tienda de confianza para el cuidado de tus mascotas</p>
-            <button class="btn-comprar">Ver Productos</button>
+           <h1>Bienvenidos a Crokelet</h1>
+           <p>Tu tienda especializada en alimentación y cuidado para mascotas</p>
+           <button class="btn-comprar">Ver Productos</button>
         </div>
 
         <div class="categorias">
