--- a/servicios.html
+++ b/servicios.html
@@ -3,8 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios - Super DogCats</title>
+    <title>Servicios - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .servicio-card {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            margin: 20px 0;
+            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+            display: flex;
+            gap: 30px;
+            align-items: center;
+        }
+
+        .servicio-imagen {
+            width: 300px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        .servicio-info {
+            flex: 1;
+        }
+
+        .horario-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .horario-item {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .precio-desde {
+            color: #4ecdc4;
+            font-weight: bold;
+            font-size: 1.2em;
+            margin: 15px 0;
+        }
+
+        @media (max-width: 768px) {
+            .servicio-card {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .servicio-imagen {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,46 +73,95 @@
             </ul>
         </nav>
 
-        <div class="logo">Super<span>DogCats</span></div>
+        <div class="logo">Cro<span>kelet</span></div>
 
         <h1>Nuestros Servicios</h1>
 
-        <div class="productos-grid">
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Veterinaria">
-                <div class="producto-info">
-                    <h3>Servicio Veterinario</h3>
-                    <p>Atención médica profesional</p>
-                    <p class="precio">Desde $300.00</p>
-                    <button class="btn-comprar">Agendar cita</button>
-                </div>
-            </div>
-
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Grooming">
-                <div class="producto-info">
-                    <h3>Grooming</h3>
-                    <p>Servicio de estética para mascotas</p>
-                    <p class="precio">Desde $250.00</p>
-                    <button class="btn-comprar">Agendar cita</button>
-                </div>
-            </div>
-
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Hotel">
-                <div class="producto-info">
-                    <h3>Hotel para Mascotas</h3>
-                    <p>Cuidado temporal de calidad</p>
-                    <p class="precio">Desde $200.00/día</p>
-                    <button class="btn-comprar">Reservar</button>
-                </div>
+        <div class="servicio-card">
+            <img src="https://via.placeholder.com/300x200" alt="Asesoría Nutricional" class="servicio-imagen">
+            <div class="servicio-info">
+                <h2>Asesoría Nutricional</h2>
+                <p>Nuestros expertos te ayudarán a elegir la mejor alimentación para tu mascota según su edad, raza y necesidades específicas.</p>
+                <ul>
+                    <li>Evaluación personalizada</li>
+                    <li>Plan de alimentación a medida</li>
+                    <li>Seguimiento mensual</li>
+                </ul>
+                <p class="precio-desde">Desde $299.99</p>
+                <button class="btn-comprar">Agendar consulta</button>
             </div>
         </div>
 
+        <div class="servicio-card">
+            <img src="https://via.placeholder.com/300x200" alt="Control Veterinario" class="servicio-imagen">
+            <div class="servicio-info">
+                <h2>Control Veterinario</h2>
+                <p>Revisiones periódicas para mantener la salud de tu mascota en óptimas condiciones.</p>
+                <ul>
+                    <li>Examen físico completo</li>
+                    <li>Control de peso</li>
+                    <li>Vacunación</li>
+                    <li>Desparasitación</li>
+                </ul>
+                <p class="precio-desde">Desde $399.99</p>
+                <button class="btn-comprar">Reservar cita</button>
+            </div>
+        </div>
+
+        <div class="servicio-card">
+            <img src="https://via.placeholder.com/300x200" alt="Grooming" class="servicio-imagen">
+            <div class="servicio-info">
+                <h2>Servicio de Grooming</h2>
+                <p>Cuidado estético profesional para que tu mascota luzca y se sienta increíble.</p>
+                <ul>
+                    <li>Baño y secado</li>
+                    <li>Corte de pelo</li>
+                    <li>Corte de uñas</li>
+                    <li>Limpieza de oídos</li>
+                </ul>
+                <p class="precio-desde">Desde $349.99</p>
+                <button class="btn-comprar">Agendar servicio</button>
+            </div>
+        </div>
+
+        <h2>Horarios de Atención</h2>
+        <div class="horario-grid">
+            <div class="horario-item">
+                <h3>Lunes a Viernes</h3>
+                <p>9:00 AM - 7:00 PM</p>
+            </div>
+            <div class="horario-item">
+                <h3>Sábados</h3>
+                <p>10:00 AM - 6:00 PM</p>
+            </div>
+            <div class="horario-item">
+                <h3>Domingos</h3>
+                <p>10:00 AM - 2:00 PM</p>
+            </div>
+        </div>
+
+        <div class="formulario-contacto">
+            <h2>Agenda tu cita</h2>
+            <form>
+                <input type="text" placeholder="Nombre del dueño" required>
+                <input type="text" placeholder="Nombre de la mascota" required>
+                <input type="email" placeholder="Email" required>
+                <input type="tel" placeholder="Teléfono" required>
+                <select required style="width: 100%; padding: 12px; margin: 10px 0; border: 2px solid #ddd; border-radius: 8px;">
+                    <option value="">Selecciona el servicio</option>
+                    <option value="nutricion">Asesoría Nutricional</option>
+                    <option value="veterinario">Control Veterinario</option>
+                    <option value="grooming">Grooming</option>
+                </select>
+                <textarea placeholder="Comentarios adicionales" rows="4"></textarea>
+                <button type="submit" class="btn-comprar">Agendar cita</button>
+            </form>
+        </div>
+
         <footer>
-            <p>© 2024 Super DogCats. Todos los derechos reservados.</p>
+            <p>© 2024 Crokelet. Todos los derechos reservados.</p>
             <p>Dirección: Calle Principal #123, Ciudad</p>
-            <p>Teléfono: (123) 456-7890 | Email: info@superdogcats.com</p>
+            <p>Teléfono: (123) 456-7890 | Email: info@crokelet.com</p>
         </footer>
     </div>
 </body>
