--- a/nosotros.html
+++ b/nosotros.html
@@ -3,15 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - Super DogCats</title>
+    <title>Nosotros - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Estilos específicos para la página Nosotros */
         .historia-section {
             padding: 40px;
             background-color: #f8f9fa;
             border-radius: 15px;
             margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .valores-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .valor-card {
+            text-align: center;
+            padding: 30px;
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .valor-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .valor-icono {
+            font-size: 2.5em;
+            color: #4ecdc4;
+            margin-bottom: 15px;
         }
 
         .equipo-grid {
@@ -25,8 +51,8 @@
             text-align: center;
             padding: 20px;
             background: white;
-            border-radius: 10px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            border-radius: 15px;
+            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
         }
 
         .miembro-equipo img {
@@ -37,25 +63,20 @@
             object-fit: cover;
         }
 
-        .valores-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
+        .timeline {
+            max-width: 800px;
+            margin: 40px auto;
+            position: relative;
         }
 
-        .valor-card {
-            text-align: center;
+        .timeline-item {
             padding: 20px;
-            background: #fff;
+            background: white;
             border-radius: 10px;
-            border: 2px solid #3498db;
-        }
-
-        .valor-card i {
-            font-size: 2em;
-            color: #3498db;
-            margin-bottom: 10px;
+            margin: 20px 0;
+            position: relative;
+            border-left: 4px solid #4ecdc4;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
         }
 
         .certificaciones {
@@ -68,28 +89,18 @@
 
         .certificacion {
             text-align: center;
-            width: 150px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            width: 200px;
         }
 
         .certificacion img {
             width: 100px;
             height: 100px;
             object-fit: contain;
-        }
-
-        .timeline {
-            position: relative;
-            max-width: 800px;
-            margin: 40px auto;
-        }
-
-        .timeline-item {
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            margin: 20px 0;
-            position: relative;
-            border-left: 4px solid #3498db;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -105,32 +116,32 @@
             </ul>
         </nav>
 
-        <div class="logo">Super<span>DogCats</span></div>
+        <div class="logo">Cro<span>kelet</span></div>
 
         <div class="historia-section">
             <h1>Nuestra Historia</h1>
-            <p>Fundada en 2015, Super DogCats nació de la pasión por el bienestar animal y el compromiso de proporcionar los mejores productos y servicios para mascotas. Lo que comenzó como una pequeña tienda local se ha convertido en un referente en el cuidado de mascotas en nuestra comunidad.</p>
+            <p>Fundada en 2015, Crokelet nació de la pasión por la nutrición y el bienestar animal. Comenzamos como una pequeña tienda especializada en alimentación para mascotas y hoy somos líderes en nutrición y cuidado integral para animales de compañía.</p>
         </div>
 
         <h2>Nuestros Valores</h2>
         <div class="valores-grid">
             <div class="valor-card">
-                <i>🐾</i>
-                <h3>Compromiso</h3>
-                <p>Dedicación total al bienestar de las mascotas</p>
-            </div>
-            <div class="valor-card">
-                <i>💝</i>
+                <div class="valor-icono">🐾</div>
                 <h3>Calidad</h3>
-                <p>Solo los mejores productos y servicios</p>
+                <p>Solo los mejores ingredientes y productos para tu mascota</p>
             </div>
             <div class="valor-card">
-                <i>🤝</i>
+                <div class="valor-icono">💝</div>
+                <h3>Compromiso</h3>
+                <p>Dedicación total al bienestar animal</p>
+            </div>
+            <div class="valor-card">
+                <div class="valor-icono">🤝</div>
                 <h3>Confianza</h3>
-                <p>Construimos relaciones duraderas con nuestros clientes</p>
+                <p>Relaciones duraderas con nuestros clientes</p>
             </div>
             <div class="valor-card">
-                <i>📚</i>
+                <div class="valor-icono">🎓</div>
                 <h3>Experiencia</h3>
                 <p>Conocimiento y profesionalismo en cada servicio</p>
             </div>
@@ -142,19 +153,19 @@
                 <img src="https://via.placeholder.com/150" alt="Director">
                 <h3>Dr. Carlos Rodríguez</h3>
                 <p>Director General</p>
-                <p>Veterinario con más de 15 años de experiencia</p>
+                <p>Veterinario especialista en nutrición animal</p>
             </div>
             <div class="miembro-equipo">
-                <img src="https://via.placeholder.com/150" alt="Veterinaria">
+                <img src="https://via.placeholder.com/150" alt="Nutricionista">
                 <h3>Dra. Ana Martínez</h3>
-                <p>Veterinaria Principal</p>
-                <p>Especialista en medicina preventiva</p>
+                <p>Nutricionista Animal</p>
+                <p>Experta en planes de alimentación personalizados</p>
             </div>
             <div class="miembro-equipo">
-                <img src="https://via.placeholder.com/150" alt="Groomer">
-                <h3>Laura Sánchez</h3>
-                <p>Groomer Profesional</p>
-                <p>Experta en estética canina y felina</p>
+                <img src="https://via.placeholder.com/150" alt="Veterinario">
+                <h3>Dr. Luis Sánchez</h3>
+                <p>Veterinario Principal</p>
+                <p>Especialista en medicina preventiva</p>
             </div>
         </div>
 
@@ -162,57 +173,45 @@
         <div class="timeline">
             <div class="timeline-item">
                 <h3>2015</h3>
-                <p>Apertura de nuestra primera tienda</p>
+                <p>Apertura de nuestra primera tienda especializada</p>
             </div>
             <div class="timeline-item">
                 <h3>2017</h3>
-                <p>Incorporación de servicios veterinarios</p>
+                <p>Expansión de servicios veterinarios y nutricionales</p>
             </div>
             <div class="timeline-item">
-                <h3>2019</h3>
-                <p>Expansión de instalaciones y servicios de grooming</p>
-            </div>
-            <div class="timeline-item">
-                <h3>2021</h3>
-                <p>Inauguración de hotel para mascotas</p>
+                <h3>2020</h3>
+                <p>Lanzamiento de nuestra línea premium Crokelet</p>
             </div>
             <div class="timeline-item">
                 <h3>2024</h3>
-                <p>Lanzamiento de servicios en línea</p>
+                <p>Inauguración de nuestro centro integral de bienestar animal</p>
             </div>
         </div>
 
-        <h2>Certificaciones y Reconocimientos</h2>
+        <h2>Certificaciones</h2>
         <div class="certificaciones">
             <div class="certificacion">
                 <img src="https://via.placeholder.com/100" alt="Certificación 1">
-                <p>Certificación Veterinaria Nacional</p>
+                <h3>ISO 9001</h3>
+                <p>Calidad en procesos</p>
             </div>
             <div class="certificacion">
                 <img src="https://via.placeholder.com/100" alt="Certificación 2">
-                <p>Premio Mejor Servicio al Cliente 2023</p>
+                <h3>Pet Care</h3>
+                <p>Excelencia en cuidado animal</p>
             </div>
             <div class="certificacion">
                 <img src="https://via.placeholder.com/100" alt="Certificación 3">
-                <p>Certificación de Calidad ISO 9001</p>
+                <h3>Vet Quality</h3>
+                <p>Servicios veterinarios premium</p>
             </div>
         </div>
 
-        <div class="formulario-contacto">
-            <h2>¿Quieres formar parte de nuestro equipo?</h2>
-            <form>
-                <input type="text" placeholder="Nombre completo" required>
-                <input type="email" placeholder="Correo electrónico" required>
-                <input type="tel" placeholder="Teléfono">
-                <textarea placeholder="Cuéntanos sobre ti y tu experiencia" rows="4" required></textarea>
-                <button type="submit" class="btn-comprar">Enviar solicitud</button>
-            </form>
-        </div>
-
         <footer>
-            <p>© 2024 Super DogCats. Todos los derechos reservados.</p>
+            <p>© 2024 Crokelet. Todos los derechos reservados.</p>
             <p>Dirección: Calle Principal #123, Ciudad</p>
-            <p>Teléfono: (123) 456-7890 | Email: info@superdogcats.com</p>
+            <p>Teléfono: (123) 456-7890 | Email: info@crokelet.com</p>
         </footer>
     </div>
 </body>
