--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Super DogCats</title>
+    <title>Contacto - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .contacto-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin: 40px 0;
+        }
+
+        .contacto-info {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+        }
+
+        .contacto-item {
+            display: flex;
+            align-items: center;
+            margin: 20px 0;
+            gap: 15px;
+        }
+
+        .contacto-icono {
+            font-size: 1.5em;
+            color: #4ecdc4;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #f0f0f0;
+            border-radius: 50%;
+        }
+
+        .mapa {
+            width: 100%;
+            height: 400px;
+            border-radius: 15px;
+            margin: 30px 0;
+            border: none;
+        }
+
+        .redes-sociales {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .red-social {
+            width: 50px;
+            height: 50px;
+            background: #4ecdc4;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 1.5em;
+            text-decoration: none;
+            transition: transform 0.3s ease;
+        }
+
+        .red-social:hover {
+            transform: translateY(-5px);
+        }
+
+        .horario-atencion {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+
+        .horario-atencion h3 {
+            color: #4ecdc4;
+            margin-bottom: 15px;
+        }
+
+        .formulario-contacto input,
+        .formulario-contacto textarea,
+        .formulario-contacto select {
+            background: white;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,35 +103,89 @@
             </ul>
         </nav>
 
-        <div class="logo">Super<span>DogCats</span></div>
+        <div class="logo">Cro<span>kelet</span></div>
 
         <h1>Contacto</h1>
 
+        <div class="contacto-grid">
+            <div class="contacto-info">
+                <h2>Información de Contacto</h2>
+                <div class="contacto-item">
+                    <div class="contacto-icono">📍</div>
+                    <div>
+                        <h3>Dirección</h3>
+                        <p>Calle Principal #123, Ciudad</p>
+                    </div>
+                </div>
+                <div class="contacto-item">
+                    <div class="contacto-icono">📞</div>
+                    <div>
+                        <h3>Teléfono</h3>
+                        <p>(123) 456-7890</p>
+                    </div>
+                </div>
+                <div class="contacto-item">
+                    <div class="contacto-icono">✉️</div>
+                    <div>
+                        <h3>Email</h3>
+                        <p>info@crokelet.com</p>
+                    </div>
+                </div>
+                <div class="horario-atencion">
+                    <h3>Horario de Atención</h3>
+                    <p>Lunes a Viernes: 9:00 AM - 7:00 PM</p>
+                    <p>Sábados: 10:00 AM - 6:00 PM</p>
+                    <p>Domingos: 10:00 AM - 2:00 PM</p>
+                </div>
+            </div>
+
+            <div class="formulario-contacto">
+                <h2>Envíanos un mensaje</h2>
+                <form>
+                    <input type="text" placeholder="Nombre completo" required>
+                    <input type="email" placeholder="Correo electrónico" required>
+                    <input type="tel" placeholder="Teléfono">
+                    <select required>
+                        <option value="">Selecciona el motivo</option>
+                        <option value="productos">Información de productos</option>
+                        <option value="servicios">Consulta de servicios</option>
+                        <option value="citas">Agendar cita</option>
+                        <option value="otros">Otros</option>
+                    </select>
+                    <textarea placeholder="Tu mensaje" rows="6" required></textarea>
+                    <button type="submit" class="btn-comprar">Enviar mensaje</button>
+                </form>
+            </div>
+        </div>
+
+        <h2>Nuestra Ubicación</h2>
+        <iframe 
+            class="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.1234567890123!2d-99.1234567!3d19.1234567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDA3JzM0LjQiTiA5OcKwMDcnMzQuNCJX!5e0!3m2!1ses!2smx!4v1234567890123"
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
+
+        <h2>Síguenos en redes sociales</h2>
+        <div class="redes-sociales">
+            <a href="#" class="red-social">📱</a>
+            <a href="#" class="red-social">📘</a>
+            <a href="#" class="red-social">📸</a>
+            <a href="#" class="red-social">🐦</a>
+        </div>
+
         <div class="formulario-contacto">
-            <h2>Envíanos un mensaje</h2>
+            <h2>Suscríbete a nuestro newsletter</h2>
             <form>
-                <input type="text" placeholder="Nombre completo" required>
-                <input type="email" placeholder="Correo electrónico" required>
-                <input type="tel" placeholder="Teléfono">
-                <textarea placeholder="Tu mensaje" rows="6" required></textarea>
-                <button type="submit" class="btn-comprar">Enviar mensaje</button>
+                <input type="email" placeholder="Tu correo electrónico" required>
+                <button type="submit" class="btn-comprar">Suscribirse</button>
             </form>
         </div>
 
-        <div class="producto">
-            <h2>Información de contacto</h2>
-            <ul>
-                <li>Teléfono: (123) 456-7890</li>
-                <li>Email: info@superdogcats.com</li>
-                <li>Dirección: Calle Principal #123, Ciudad</li>
-                <li>Horario: Lunes a Sábado 9:00 - 20:00</li>
-            </ul>
-        </div>
-
         <footer>
-            <p>© 2024 Super DogCats. Todos los derechos reservados.</p>
+            <p>© 2024 Crokelet. Todos los derechos reservados.</p>
             <p>Dirección: Calle Principal #123, Ciudad</p>
-            <p>Teléfono: (123) 456-7890 | Email: info@superdogcats.com</p>
+            <p>Teléfono: (123) 456-7890 | Email: info@crokelet.com</p>
         </footer>
     </div>
 </body>
