--- a/nosotros.html
+++ b/nosotros.html
@@ -120,7 +120,7 @@
 
         <div class="historia-section">
             <h1>Nuestra Historia</h1>
-            <p>Fundada en 2015, Crokelet nació de la pasión por la nutrición y el bienestar animal. Comenzamos como una pequeña tienda especializada en alimentación para mascotas y hoy somos líderes en nutrición y cuidado integral para animales de compañía.</p>
+            <p>Fundada en 2024, Crokelet nació de la pasión por la nutrición y el bienestar animal. Comenzamos como una pequeña tienda especializada en alimentación para mascotas y hoy somos líderes en nutrición y cuidado integral para animales de compañía.</p>
         </div>
 
         <h2>Nuestros Valores</h2>
@@ -151,19 +151,19 @@
         <div class="equipo-grid">
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Director">
-                <h3>Dr. Carlos Rodríguez</h3>
+                <h3>Dr. Maria Ramos</h3>
                 <p>Director General</p>
                 <p>Veterinario especialista en nutrición animal</p>
             </div>
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Nutricionista">
-                <h3>Dra. Ana Martínez</h3>
+                <h3>Dra. Amir Enriquez</h3>
                 <p>Nutricionista Animal</p>
                 <p>Experta en planes de alimentación personalizados</p>
             </div>
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Veterinario">
-                <h3>Dr. Luis Sánchez</h3>
+                <h3>Dr. Nicolas Calderón</h3>
                 <p>Veterinario Principal</p>
                 <p>Especialista en medicina preventiva</p>
             </div>
