--- a/nosotros.html
+++ b/nosotros.html
@@ -157,7 +157,7 @@
             </div>
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Nutricionista">
-                <h3>Dra. Amir Enriquez</h3>
+                <h3>Dr. Amir Enriquez</h3>
                 <p>Nutricionista Animal</p>
                 <p>Experta en planes de alimentación personalizados</p>
             </div>
