--- a/nosotros.html
+++ b/nosotros.html
@@ -151,7 +151,7 @@
         <div class="equipo-grid">
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Director">
-                <h3>Dr. Maria Ramos</h3>
+                <h3>Dra. Maria Ramos</h3>
                 <p>Director General</p>
                 <p>Veterinario especialista en nutrición animal</p>
             </div>
