--- a/nosotros.html
+++ b/nosotros.html
@@ -153,13 +153,13 @@
                 <img src="https://via.placeholder.com/150" alt="Director">
                 <h3>Dra. Maria Ramos</h3>
                 <p>Director General</p>
-                <p>Veterinario especialista en nutrición animal</p>
+                <p>Veterinaria especialista en nutrición animal</p>
             </div>
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Nutricionista">
                 <h3>Dr. Amir Enriquez</h3>
                 <p>Nutricionista Animal</p>
-                <p>Experta en planes de alimentación personalizados</p>
+                <p>Experto en planes de alimentación personalizados</p>
             </div>
             <div class="miembro-equipo">
                 <img src="https://via.placeholder.com/150" alt="Veterinario">
