--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
             </ul>
         </nav>
 
-        <div class="logo">Cro<span>kelet</span></div>
+        <div class="logo">
+            <img src="images/logo.png" alt="Crokelet Logo" class="logo-img">
+        </div>
 
         <div class="hero-section">
             <h1>Nutrición Experta para tu Mascota</h1>
             <p>Alimentación de calidad y cuidados especializados para el bienestar de tu mejor amigo</p>
             <button class="btn-comprar" onclick="location.href='productos.html'">Ver Productos</button>
-        </div>
-
-        <div class="eslogan">
-            <h2>¿Por qué elegir Crokelet?</h2>
-            <p>Nos especializamos en nutrición de alta calidad y productos premium para el bienestar de tus mascotas</p>
         </div>
 
         <div class="categorias">
