--- a/servicios.html
+++ b/servicios.html
@@ -5,61 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .servicio-card {
-            background: white;
-            border-radius: 15px;
-            padding: 30px;
-            margin: 20px 0;
-            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-            display: flex;
-            gap: 30px;
-            align-items: center;
-        }
-
-        .servicio-imagen {
-            width: 300px;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        .servicio-info {
-            flex: 1;
-        }
-
-        .horario-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
-        }
-
-        .horario-item {
-            background: #f8f9fa;
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .precio-desde {
-            color: #4ecdc4;
-            font-weight: bold;
-            font-size: 1.2em;
-            margin: 15px 0;
-        }
-
-        @media (max-width: 768px) {
-            .servicio-card {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .servicio-imagen {
-                width: 100%;
-            }
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -73,7 +18,9 @@
             </ul>
         </nav>
 
-        <div class="logo">Cro<span>kelet</span></div>
+        <div class="logo">
+            <img src="images/logo.png" alt="Crokelet Logo" class="logo-img">
+        </div>
 
         <h1>Nuestros Servicios</h1>
 
@@ -147,7 +94,7 @@
                 <input type="text" placeholder="Nombre de la mascota" required>
                 <input type="email" placeholder="Email" required>
                 <input type="tel" placeholder="Teléfono" required>
-                <select required style="width: 100%; padding: 12px; margin: 10px 0; border: 2px solid #ddd; border-radius: 8px;">
+                <select required>
                     <option value="">Selecciona el servicio</option>
                     <option value="nutricion">Asesoría Nutricional</option>
                     <option value="veterinario">Control Veterinario</option>
