--- a/contacto.html
+++ b/contacto.html
@@ -5,91 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Crokelet</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .contacto-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin: 40px 0;
-        }
-
-        .contacto-info {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-        }
-
-        .contacto-item {
-            display: flex;
-            align-items: center;
-            margin: 20px 0;
-            gap: 15px;
-        }
-
-        .contacto-icono {
-            font-size: 1.5em;
-            color: #4ecdc4;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: #f0f0f0;
-            border-radius: 50%;
-        }
-
-        .mapa {
-            width: 100%;
-            height: 400px;
-            border-radius: 15px;
-            margin: 30px 0;
-            border: none;
-        }
-
-        .redes-sociales {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 30px 0;
-        }
-
-        .red-social {
-            width: 50px;
-            height: 50px;
-            background: #4ecdc4;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.5em;
-            text-decoration: none;
-            transition: transform 0.3s ease;
-        }
-
-        .red-social:hover {
-            transform: translateY(-5px);
-        }
-
-        .horario-atencion {
-            background: #f8f9fa;
-            padding: 20px;
-            border-radius: 10px;
-            margin-top: 20px;
-        }
-
-        .horario-atencion h3 {
-            color: #4ecdc4;
-            margin-bottom: 15px;
-        }
-
-        .formulario-contacto input,
-        .formulario-contacto textarea,
-        .formulario-contacto select {
-            background: white;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -103,7 +18,9 @@
             </ul>
         </nav>
 
-        <div class="logo">Cro<span>kelet</span></div>
+        <div class="logo">
+            <img src="images/logo.png" alt="Crokelet Logo" class="logo-img">
+        </div>
 
         <h1>Contacto</h1>
 
