--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
 
         <div class="logo">
-            <img src="/logo.png" alt="Crokelet Logo" class="logo-img">
+            <img src="logo.png" alt="Crokelet Logo" class="logo-img">
         </div>
 
         <div class="hero-section">
