--- a/index.html
+++ b/index.html
@@ -3,96 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Crokelet - La mejor nutrición para tu mascota. Alimentos premium para perros y gatos.">
     <title>Crokelet - Nutrición experta para mascotas</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Fuentes de Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-
-        <div class="logo">
-            <img src="logo.png" alt="Crokelet Logo" class="logo-img">
-        </div>
-
-        <div class="hero-section">
-            <h1>Nutrición Experta para tu Mascota</h1>
-            <p>Alimentación de calidad y cuidados especializados para el bienestar de tu mejor amigo</p>
-            <button class="btn-comprar" onclick="location.href='productos.html'">Ver Productos</button>
-        </div>
-
-        <div class="categorias">
-            <a href="productos.html#perros" class="categoria-card">
-                <img src="https://via.placeholder.com/300" alt="Alimentos para Perros">
-                <h3>Perros</h3>
-                <p>Nutrición especializada y snacks saludables</p>
-            </a>
-            <a href="productos.html#gatos" class="categoria-card">
-                <img src="https://via.placeholder.com/300" alt="Alimentos para Gatos">
-                <h3>Gatos</h3>
-                <p>Alimentación balanceada y premios</p>
-            </a>
-            <a href="servicios.html" class="categoria-card">
-                <img src="https://via.placeholder.com/300" alt="Servicios Veterinarios">
-                <h3>Servicios</h3>
-                <p>Asesoría nutricional y cuidado integral</p>
-            </a>
-        </div>
-
-        <div class="productos-grid">
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Crokelet Premium">
-                <div class="producto-info">
-                    <h3>Crokelet Premium</h3>
-                    <p>Fórmula especial para perros adultos</p>
-                    <p class="precio">$599.99</p>
-                    <button class="btn-comprar">Agregar al carrito</button>
-                </div>
+    <!-- Header con navegación fija -->
+    <header class="header">
+        <div class="nav-container">
+            <div class="logo">
+                <img src="logo.png" alt="Crokelet Logo" class="logo-img">
             </div>
-
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Crokelet Gatitos">
-                <div class="producto-info">
-                    <h3>Crokelet Gatitos</h3>
-                    <p>Nutrición especial para gatitos</p>
-                    <p class="precio">$499.99</p>
-                    <button class="btn-comprar">Agregar al carrito</button>
-                </div>
-            </div>
-
-            <div class="producto-card">
-                <img src="https://via.placeholder.com/300" alt="Snacks Saludables">
-                <div class="producto-info">
-                    <h3>Snacks Saludables</h3>
-                    <p>Premios nutritivos y deliciosos</p>
-                    <p class="precio">$199.99</p>
-                    <button class="btn-comprar">Agregar al carrito</button>
-                </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html" class="active"><i class="fas fa-home"></i> Inicio</a></li>
+                    <li><a href="productos.html"><i class="fas fa-bone"></i> Productos</a></li>
+                    <li><a href="servicios.html"><i class="fas fa-stethoscope"></i> Servicios</a></li>
+                    <li><a href="nosotros.html"><i class="fas fa-users"></i> Nosotros</a></li>
+                    <li><a href="contacto.html"><i class="fas fa-envelope"></i> Contacto</a></li>
+                </ul>
+            </nav>
+            <div class="nav-icons">
+                <a href="#" class="cart-icon"><i class="fas fa-shopping-cart"></i> <span class="cart-count">0</span></a>
+                <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
             </div>
         </div>
+    </header>
 
-        <div class="formulario-contacto">
+    <main class="container">
+        <!-- Hero Section mejorada -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>Nutrición Experta para tu Mascota</h1>
+                <p>Alimentación de calidad y cuidados especializados para el bienestar de tu mejor amigo</p>
+                <div class="hero-buttons">
+                    <button class="btn-primary" onclick="location.href='productos.html'">
+                        <i class="fas fa-shopping-bag"></i> Ver Productos
+                    </button>
+                    <button class="btn-secondary" onclick="location.href='servicios.html'">
+                        <i class="fas fa-paw"></i> Servicios
+                    </button>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="hero-image.jpg" alt="Mascota feliz">
+            </div>
+        </section>
+
+        <!-- Nuevas características -->
+        <section class="features">
+            <div class="feature-card">
+                <i class="fas fa-truck"></i>
+                <h3>Envío Gratis</h3>
+                <p>En compras mayores a $999</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Garantía de Calidad</h3>
+                <p>100% satisfacción garantizada</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-headset"></i>
+                <h3>Soporte 24/7</h3>
+                <p>Atención personalizada</p>
+            </div>
+        </section>
+
+        <!-- Resto del contenido existente con mejoras -->
+        <!-- ... (categorias, productos-grid, etc.) ... -->
+
+        <!-- Nueva sección de testimonios -->
+        <section class="testimonios">
+            <h2>Lo que dicen nuestros clientes</h2>
+            <div class="testimonios-slider">
+                <!-- Agregar múltiples testimonios -->
+            </div>
+        </section>
+
+        <!-- Formulario de contacto mejorado -->
+        <section class="formulario-contacto">
             <h2>¿Tienes dudas sobre la nutrición de tu mascota?</h2>
-            <form>
-                <input type="text" placeholder="Nombre" required>
-                <input type="email" placeholder="Email" required>
+            <form id="contactForm" onsubmit="return validateForm(event)">
+                <div class="form-group">
+                    <input type="text" id="nombre" placeholder="Nombre" required>
+                    <input type="email" id="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <select id="tipoMascota" required>
+                        <option value="">Selecciona el tipo de mascota</option>
+                        <option value="perro">Perro</option>
+                        <option value="gato">Gato</option>
+                        <option value="otro">Otro</option>
+                    </select>
+                </div>
                 <textarea placeholder="Tu consulta" rows="4" required></textarea>
-                <button type="submit" class="btn-comprar">Enviar consulta</button>
+                <button type="submit" class="btn-primary">
+                    <i class="fas fa-paper-plane"></i> Enviar consulta
+                </button>
             </form>
-        </div>
+        </section>
+    </main>
 
-        <footer>
+    <!-- Footer mejorado -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contacto</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Calle Principal #123, Ciudad</p>
+                <p><i class="fas fa-phone"></i> (123) 456-7890</p>
+                <p><i class="fas fa-envelope"></i> info@crokelet.com</p>
+            </div>
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Newsletter</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Tu email">
+                    <button type="submit">Suscribirse</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
             <p>© 2024 Crokelet. Todos los derechos reservados.</p>
-            <p>Dirección: Calle Principal #123, Ciudad</p>
-            <p>Teléfono: (123) 456-7890 | Email: info@crokelet.com</p>
-        </footer>
-    </div>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="js/main.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
